src/styles/layouts/_section.css
.section {
  color: var(--foreground-color);
  position: relative;
  padding-block: var(--spacing-lg);
  overflow: hidden;

  @media screen and (min-width: 1200px) {
    padding-block: 0;
  }
}

.section--blue {
  background-color: var(--foreground-color);
  color: var(--background-color);
}

.section--green {
  background-color: var(--green-dark);
  color: var(--green-light);
  z-index: 2;
}

.section--orange {
  background-color: var(--orange);
  color: var(--peach);
  z-index: 2;
}

.section--yellow {
  background-color: var(--yellow);
  color: var(--peach);
  overflow: hidden;
}

.section--full {
  min-height: 100svh;
  width: 100vw;
}

